sass/_pages.scss
// Index
.intro {
  padding-top: 0;

  .title {
    font-size: 1.8em;
    line-height: 1.2;
    font-weight: 600;
    margin: var(--spacing-vertical) 0;
    border-left: 4px solid var(--color-primary);
    padding-left: var(--spacing-horizontal);
  }
}

// Work
.work-item {
  h2 {
    margin-bottom: -2px;
  }

  .details {
    color: var(--color-fg-text);
    text-transform: uppercase;
    font-size: .8em;
  }
}

